2004-05-20  Padraig O'Briain <padraig.obriain@sun.com>

	* applet.c:
	(accessx_status_applet_layout_box): Check that sapplet->box is
	realized instead of sapplet->applet and also check that 
	sapplet->initialized is set before calling 
	accessx_status_applet_update.
	(accessx_status_applet_realize): Call accessx_status_applet_reset
	in an idle handler.
	(accessx_status_applet_fill): If sapplet->box was realised call
	accessx_status_applet_initialize instead of connecting to "realize"
	signal. Call accessx_status_applet_reset if sapplet->box was realized
	instead of always calling it in a timeout handler.

	Fixes bug #137585.
	
2004-03-04  Bill Haneman <billh@gnome.org>

	* applet.c:
	(accessx_status_applet_init_modifiers): Don't include
	ISO_Group_Shift and ISO_Group_Latch/Lock in alt_gr_mask;
	if present these probably deserve their own icon (TBD).
	(button_press_callback): Invoke on button-press, not double-click.
	Fix for bug #124018.
	
2004-02-29  Dennis Smit  <ds@nerds-incorporated.org>

	* applet.c (accessx_status_applet_background):
	Removed bogus return.

2004-02-26  Dennis Smit  <ds@nerds-incorporated.org>

	* applet.c (accessx_status_applet_background):
	Added function to listen to panel background
	changes and adopt the applet drawing to the
	panel background.

	(accessx_status_applet_fill): Connect signal
	to change_background.

	This is not working for pixmap backgrounds yet.

2004-02-24  Bill Haneman <billh@gnome.org>

	* applet.c:  Fixes for bug #135292.
	(accessx_status_applet_init_modifiers):
	Detect ISO group/level modifiers as well as
	"old fashioned" XK_Mode_Switch modifier.
	(accessx_status_applet_get_glyph_pixbuf):
	Fixed to work properly with white-on-black.
	(accessx_status_applet_get_icon_set): Fixed to 
	work correctly for SELECTED state (corresponding to 
	LOCKED AltGr modifier).

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* applet.c (about_cb):
	Set the about dialog to the right screen